--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="API for ISP Outage Logger.">
+  <meta name="description" content="API for Temperature Logger.">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 
-  <title>ISP Outage Logger API</title>
+  <title>Temperature Logger API</title>
 </head>
 
 <body>
   <header>
-    <h1>ISP Outage Logger API</h1>
+    <h1>Temperature Logger API</h1>
   </header>
 </body>
 
